# portfolio_tracker_public

./: .dockerignore  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  Makefile  PUBLIC_MIRROR.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
api/: Alembic.ini  README.md
api/app/: __init__.py  config.py  main.py  observability.py  setup_user.py
api/migrations/: env.py
api/scripts/: provision_test_database.py
api/tests/: README.md  conftest.py  test_ci_workflow.py  test_public_readiness.py  test_verify_all_script.py
data/: README.md
docs/: README.md  automation-guide.md  binance_accounting_policy.md  current_state.md  implementation_plan.md  local_app_compose_runbook.md  local_prod_db_migration_runbook.md  product_north_star.md  roadmap.md  verification_matrix.md  worktree-codex.bashsource  worktree-codex.md
docs/architecture/: actions_budget_public_readiness.md  cloud_cost_retention_model.md  container-view.md  dashboard_contract.md  durable_accounting_state_decision.md  historical_anchors_confidence_plan.md  reconciliation_policy.md  (+3 more)
frontend/: DESIGN.md  README.md  jest.config.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.shared-contract-smoke.json
infra/: README.md  docker-compose.yml
scripts/: backup_local_prod_db.sh  binance_export_baseline_dry_run.py  restore_drill_local_prod_db.sh  start_local_app_compose.sh  verify_all.sh  verify_compose_app_profile.sh
shared/: README.md
worker/: README.md  app.py  jobs.py  scheduler.py
(+178 files in other folders)
